--- a/app/src/main/res/menu/main_activity_menu.xml
+++ b/app/src/main/res/menu/main_activity_menu.xml
@@ -16,5 +16,11 @@
     <item android:id="@+id/sign_out"
         android:title="Sign out"
         />
+    <item android:id="@+id/users_list"
+        android:title="Members"
+        />
+    <item android:id="@+id/user_profile"
+        android:title="Profile"
+        />
 
 </menu>
