--- a/app/src/main/res/layout/notice_card.xml
+++ b/app/src/main/res/layout/notice_card.xml
@@ -11,7 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp">
-
+<LinearLayout
+    android:id="@+id/notice_header"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tv_sender"
             android:layout_width="wrap_content"
@@ -20,6 +23,53 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/design_default_color_on_secondary"/>
+    <TextView
+        android:id="@+id/tv_from"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_start"
+        android:padding="3dp"
+        android:text="from" />
+
+    <TextView
+        android:id="@+id/tv_from_domain_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_start"
+        android:text="domain"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@color/design_default_color_on_secondary"/>
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    >
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true">
+    <TextView
+        android:id="@+id/tv_sent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/margin_start"
+        android:text="sent"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+    <TextView
+        android:id="@+id/tv_sent_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="@dimen/margin_start"
+        android:text="date"
+        android:textColor="@color/colorPrimary"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+    </LinearLayout>
+</RelativeLayout>
+</LinearLayout>
+
         <TextView
             android:id="@+id/tv_subject"
             android:layout_width="wrap_content"
@@ -28,7 +78,7 @@
             android:singleLine="true"
             android:ellipsize="end"
             android:textSize="15sp"
-            android:layout_below="@+id/tv_sender"
+            android:layout_below="@+id/notice_header"
             android:textStyle="bold"
             android:textColor="@color/design_default_color_on_secondary"/>
         <TextView
@@ -40,28 +90,7 @@
             android:ellipsize="end"
             android:textSize="15sp"
             android:layout_below="@+id/tv_subject"
-             />
-
-
-        <TextView
-            android:id="@+id/tv_from"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_start"
-            android:padding="3dp"
-            android:layout_toRightOf="@+id/tv_sender"
-            android:text="from" />
-
-        <TextView
-            android:id="@+id/tv_from_domain_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_start"
-            android:text="domain"
-            android:layout_toRightOf="@+id/tv_from"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="@color/design_default_color_on_secondary"/>
+            />
 
         <!--        <Button-->
 <!--            android:id="@+id/notice_download_button"-->
